# flappyai

./: CMakeLists.txt  README.MD
include/: bird.h  game.h  neuralnetwork.h  pipe.h  pipemanager.h  shader.h  window.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: bird.fs  bird.vs  pipe.fs  pipe.vs
src/: bird.cpp  game.cpp  main.cpp  pipe.cpp  pipemanager.cpp  shader.cpp  window.cpp
